Modificaciones para hacer la página responsiva

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width">
         <title>Porfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/flexbox.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -20,11 +18,11 @@
     
                 <nav class="headerPrincipal-nav">
                     <a class="headerPrincipal-nav-link" href="#sobre-mi">Acerca de mi</a>
-                    <a class="headerPrincipal-nav-link" href="#skills">Habilidades</a>
+                    <a class="headerPrincipal-nav-link" href="#skills">Skills</a>
                     <a class="headerPrincipal-nav-link" href="#pasatiempos">Hobbies</a>
                     <a class="headerPrincipal-nav-link" href="#estudios">Formacion</a>
                     <a class="headerPrincipal-nav-link" href="#proyects">Proyectos</a>
-                    <a class="headerPrincipal-nav-link-final" href="#">Contacto</a>
+                    <a class="headerPrincipal-nav-link-final" href="#contacto">Contacto</a>
                 </nav>
             </div>    
         </header>
@@ -47,12 +45,9 @@
             </div>
             <a name="sobre-mi"></a>
             <div class="acerca-de-mi">
-                <div class="imagen-cpu">
-                    <img class="foto-cpu" src="imagenes/computadoras.jpg">
-                </div>
                 <div class="datos-personales">
                     <h1 class="subtitulos">Acerca de mi</h1>
-                    <p class="mis-datos">Mi nombre es Mariano Miró. Tengo 44 años. Soy Abogado y Escribano desde hace 20 años, y desde hace 2 años estoy estudiando programación.
+                    <p class="mis-datos">Tengo 44 años. Soy Abogado y Escribano desde hace 20 años, y desde hace 2 años estoy estudiando programación.
                         Estoy terminando mi especialización en Ciencia de Datos en el ITBA y actualmente también estoy participando del proyecto Oracle ONE junto a Alura Latam.</p>
                     <p class="mis-datos">
                         Mi objetivo principal es trabajar con equipos de ciencia de datos, usando mi experiencia para enriquecer las conclusiones y desplegar los modelos de Machine Learning creando aplicaciones Web. 
@@ -61,6 +56,10 @@
                         Espero seguir incorporando con nuevos conocimientos e incorporando nuevos lenguajes. 
                     </p>
                 </div>
+                <div class="imagen-cpu">
+                    <img class="foto-cpu" src="imagenes/computadoras.jpg">
+                </div>
+                
             </div>
             <a name="skills"></a>
             <div class="habilidades">
