Algunos cambios menores para mejorar la visualizacion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Porfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        
+        <script src="https://kit.fontawesome.com/3bdd196292.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="headerPorfolio">
@@ -33,10 +34,10 @@
                         Hola, me llamo Mariano Miró. Diseño páginas Web y hago Ciencia de datos
                     </h1>
                     <nav class="redes-sociales">
-                        <a class="icon" href="https://github.com/BJRomPal" target="_blank"><i class="fa fa-github"></i></a>
-                        <a class="icon" href="https://www.linkedin.com/in/mariano-mir%C3%B3-21008022a/" target="_blank"> <i class="fa fa-linkedin"></i></a>
-                        <a class="icon" href="https://twitter.com/BJRomPal" target="_blank"> <i class="fa fa-twitter"></i></a>
-                        <a class="icon" href="https://twitter.com/BJRomPal" target="_blank"> <i class="fa fa-file"></i></a>                        
+                        <a class="icon" href="https://github.com/BJRomPal" target="_blank"><i class="fa fa-github fa-sm"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/in/mariano-mir%C3%B3-21008022a/" target="_blank"> <i class="fa fa-linkedin fa-sm"></i></a>
+                        <a class="icon" href="https://twitter.com/BJRomPal" target="_blank"> <i class="fa fa-twitter fa-sm"></i></a>
+                        <a class="icon" href="https://twitter.com/BJRomPal" target="_blank"> <i class="fa fa-file fa-sm"></i></a>                        
                     </nav>
                 </div>
                 <div class ="imagen-personal">
@@ -97,6 +98,7 @@
                 <div class="fotos-hobbies">
                     <img class="foto" src="imagenes/futbol.jpg">
                     <img class="foto" src="imagenes/leyendo.png">
+                    <img class="foto" src="imagenes/dibujo.jpg">
                 </div>
             </div>
             <a name="estudios"></a>
