Ajustes finales. Agregación de icono, menú fijo y scroll smoth

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Porfolio</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+        <link rel="icon" href="iconoM.ico" type="image/x-icon">
         <script src="https://kit.fontawesome.com/3bdd196292.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="headerPorfolio">
             <div class="container">
                 <h1 class="headerPrincipal-developer">
-                    <a href="#"><img src="logo/logo.png">Portfolio Personal</a>
+                    <img src="logo/logo.png">Portfolio Personal
                 </h1>
     
                 <nav class="headerPrincipal-nav">
@@ -202,6 +203,10 @@
                 </form>
             </section>
         </main>
+        <footer>
+            <img src="logo/logo.png">
+            <p class="copyright">&copy Copyrigth 2022</p>
+        </footer>
     </body>
 
 </html>
