Arreglos Estéticos al CSS. Añadi llamada al logo para que vuelva la página al inicio

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
         <script src="https://kit.fontawesome.com/3bdd196292.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <a name="inicio"></a>
         <header class="headerPorfolio">
             <div class="container">
-                <h1 class="headerPrincipal-developer">
-                    <img src="logo/logo.png">Portfolio Personal
-                </h1>
+                <a href="#inicio">
+                    <h1 class="headerPrincipal-developer">
+                        <img src="logo/logo.png">Portfolio Personal
+                    </h1>
+                </a>
     
                 <nav class="headerPrincipal-nav">
                     <a class="headerPrincipal-nav-link" href="#sobre-mi">Acerca de mi</a>
